--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Asimovian&family=Pinyon+Script&display=swap" rel="stylesheet">
         <meta charset="utf-8" />  
         <div class="contenedor">
-                   <img class="Avatar"   src="https://adoptaconwwf.es/img/lince_extra.jpg" align= "left">
+                   <img class="Avatar"   src="https://adoptaconwwf.es/img/lince_extra.jpg" align= "right">
                </div>
         <title><!--nombre apellido--></title>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/2.0.4/p5.min.js" integrity="sha512-rOTpdy9fXlcLeLxPj5H4pof51FAx2lVK8Soexk8yTek9wrenwm56MKT2VddH8GCDd4a2js2i4GwezlUkbGdVQg==" crossorigin="anonymous" referrerpolicy="no-referrer"
