--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <div class="contenedor">
                    <img class="Avatar"  src="https://adoptaconwwf.es/img/lince_extra.jpg" align= "right">
                </div>
-        <title><!--nombre apellido--></title>
+        <title>Valentina Fritis</title>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/2.0.4/p5.min.js" integrity="sha512-rOTpdy9fXlcLeLxPj5H4pof51FAx2lVK8Soexk8yTek9wrenwm56MKT2VddH8GCDd4a2js2i4GwezlUkbGdVQg==" crossorigin="anonymous" referrerpolicy="no-referrer"
         ></script>
         <link rel="stylesheet" type="text/css" href="style.css" />
